implement getCities, getLocalities, sublocalities and then get data for a few cases

--- a/demand_supply_table/templates/demand_supply_table/index.html
+++ b/demand_supply_table/templates/demand_supply_table/index.html
@@ -6,14 +6,14 @@
 	<table id="table">
 		<thead>
 			<tr>
-			<th data-field="city" data-sortable="true">City</th>
-			<th data-field="locality" data-sortable="true">Locality</th>
-			<th data-field="sublocality" data-sortable="true">Sublocality</th>
-			<th data-field="demand" data-sortable="true">Demand</th>
-			<th data-field="supply" data-sortable="true">Supply</th>
-			<th data-field="d-s gap" data-sortable="true">D-S gap</th>
-			<th data-field="conversions" data-sortable="true">Conversions</th>
-			<th data-field="leads per user" data-sortable="true">Leads per user</th>
+				<th data-field="city" data-sortable="true">City</th>
+				<th data-field="locality" data-sortable="true">Locality</th>
+				<th data-field="sublocality" data-sortable="true">Sublocality</th>
+				<th data-field="demand" data-sortable="true">Demand</th>
+				<th data-field="supply" data-sortable="true">Supply</th>
+				<th data-field="ds_gap" data-sortable="true">D-S gap</th>
+				<th data-field="conversions" data-sortable="true">Conversions</th>
+				<th data-field="leads_per_user" data-sortable="true">Leads per user</th>
 			</tr>
 		</thead>
 	</table>
