implement get demand supply data for all cases

--- a/demand_supply_table/templates/demand_supply_table/index.html
+++ b/demand_supply_table/templates/demand_supply_table/index.html
@@ -3,7 +3,7 @@
 <!-- Table -->
 <div id="table-div" class="container">
 	<hr>
-	<table id="table">
+	<table id="table" data-toggle="table">
 		<thead>
 			<tr>
 				<th data-field="city" data-sortable="true">City</th>
