--- a/demand_supply_table/templates/demand_supply_table/index.html
+++ b/demand_supply_table/templates/demand_supply_table/index.html
@@ -3,7 +3,7 @@
 <!-- Table -->
 <div id="table-div" class="container">
 	<hr>
-	<table class="table table-striped table-bordered table-hover" data-show-columns="true" data-search="true" data-show-refresh="true" data-show-toggle="true" data-show-export="true" id="table" data-toggle="table" >
+	<table class="table table-striped table-bordered table-hover" data-show-columns="true" data-search="true" data-show-export="true" id="table" data-toggle="table" >
 		<thead>
 			<tr>
 				<th data-field="city" data-sortable="true">City</th>
